# wikimedia-panorama-cleanup

./: .gitignore  README.md  commons-panorama-taxonomy-analysis.md  montage-360-support-advice.md  panorama-classification-guide.md  panorama-classifier  panorama-classifier-design.md  pyproject.toml  requirements.txt
panorama_classifier/: __init__.py  camera_db.py  cli.py  fusion.py  heuristics.py  metadata.py  output.py  pixel_analysis.py
